--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -1,15 +1,19 @@
-name: "CodeQL + SAST Scan"
+name: "Full SAST + Dependency Scan"
 
 on:
   push:
-    branches: [ "main","develop" ]
+    branches: [ "main", "develop" ]
   pull_request:
-    branches: [ "main","develop" ]
+    branches: [ "main", "develop" ]
   schedule:
     - cron: '25 16 * * 4'
 
 jobs:
-  analyze:
+
+  # -------------------
+  # CodeQL Analysis
+  # -------------------
+  codeql:
     name: CodeQL Analysis (${{ matrix.language }})
     runs-on: ${{ (matrix.language == 'swift' && 'macos-latest') || 'ubuntu-latest' }}
     permissions:
@@ -50,13 +54,14 @@ jobs:
       # Skip Python if no files
       - name: Skip Python if none
         if: matrix.language == 'python'
+        continue-on-error: true
         run: |
           if ! git ls-files '*.py' | grep -q .; then
             echo "No Python files found. Skipping CodeQL."
             exit 78
           fi
 
-      # Skip Ruby if no files
+      # Skip Ruby if none
       - name: Skip Ruby if none
         if: matrix.language == 'ruby'
         continue-on-error: true
@@ -77,10 +82,36 @@ jobs:
         if: matrix.build-mode == 'manual'
         shell: bash
         run: |
-          dotnet restore
+          dotnet restore 
           dotnet build --configuration Release
 
       - name: Perform CodeQL Analysis
         uses: github/codeql-action/analyze@v4
         with:
           category: "/language:${{matrix.language}}"
+
+  # -------------------
+  # Semgrep Scan
+  # -------------------
+  semgrep:
+    name: Semgrep Scan
+    runs-on: ubuntu-latest
+    needs: []
+    steps:
+      - uses: actions/checkout@v4
+      - name: Run Semgrep
+        uses: returntocorp/semgrep-action@v2
+        with:
+          config: "auto"
+
+  # -------------------
+  # Gitleaks Secrets Scan
+  # -------------------
+  gitleaks:
+    name: Gitleaks Scan
+    runs-on: ubuntu-latest
+    needs: []
+    steps:
+      - uses: actions/checkout@v4
+      - name: Run Gitleaks
+        uses: gitleaks/gitleaks-action@v2
