--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -98,6 +98,12 @@ jobs:
       # Perform CodeQL Analysis
       # -------------------------------
       - name: Perform CodeQL Analysis
+        if: >
+          matrix.language == 'csharp' ||
+          (matrix.language == 'javascript-typescript' && steps.check_js.outputs.found == 'true') ||
+          (matrix.language == 'python' && steps.check_py.outputs.found == 'true') ||
+          (matrix.language == 'ruby' && steps.check_rb.outputs.found == 'true') ||
+          matrix.language == 'actions'
         uses: github/codeql-action/analyze@v4
         with:
           category: "/language:${{matrix.language}}"
