--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -134,7 +134,7 @@ jobs:
             semgrep --config auto --error --sarif --output /src/semgrep-results.sarif
   
       - name: Upload Semgrep SARIF
-        if: steps.check_files.outputs.found == 'true'  # or use 'if: always()' if you want upload even on exit code 1
+        if: always()   # ✅ runs even if Semgrep exits 1
         uses: github/codeql-action/upload-sarif@v2
         with:
           sarif_file: semgrep-results.sarif
