--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -1,126 +1,76 @@
-name: "SAST + Secrets Parallel Scan"
+name: ".NET PR Workflow"
 
 on:
-  push:
-    branches: [ "main", "develop" ]
   pull_request:
+    branches: [ "main", "develop" ]
+  push:
     branches: [ "main", "develop" ]
 
 permissions:
   contents: read
   security-events: write
+
 jobs:
 
   # -------------------
-  # 1️⃣ CodeQL Analysis
+  # 1️⃣ Build & Test
+  # -------------------
+  build-test:
+    name: Build & Test
+    runs-on: windows-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Setup .NET SDK
+        uses: actions/setup-dotnet@v3
+        with:
+          dotnet-version: '8.0.x'  # adjust as needed
+
+      - name: Restore dependencies
+        run: dotnet restore
+
+      - name: Build
+        run: dotnet build --no-restore --configuration Release
+
+      - name: Test
+        run: dotnet test --no-build --verbosity normal --configuration Release
+
+  # -------------------
+  # 2️⃣ Security Scans (parallel)
   # -------------------
   codeql:
     name: CodeQL Analysis
     runs-on: ubuntu-latest
+    needs: build-test
     permissions:
       security-events: write
-      packages: read
-      actions: read
       contents: read
-
     strategy:
       fail-fast: false
       matrix:
         include:
           - language: csharp
             build-mode: none
-          - language: javascript-typescript
-            build-mode: none
-          - language: python
-            build-mode: none
-          - language: ruby
-            build-mode: none
-          - language: actions
-            build-mode: none
-
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
-      # -------------------------------
-      # Detect JS/TS files
-      # -------------------------------
-      - name: Detect JS/TS files
-        id: check_js
-        if: matrix.language == 'javascript-typescript'
-        run: |
-          if git ls-files '*.js' '*.ts' | grep -q .; then
-            echo "found=true" >> $GITHUB_OUTPUT
-          else
-            echo "found=false" >> $GITHUB_OUTPUT
-          fi
-
-      # -------------------------------
-      # Detect Python files
-      # -------------------------------
-      - name: Detect Python files
-        id: check_py
-        if: matrix.language == 'python'
-        run: |
-          if git ls-files '*.py' | grep -q .; then
-            echo "found=true" >> $GITHUB_OUTPUT
-          else
-            echo "found=false" >> $GITHUB_OUTPUT
-          fi
-
-      # -------------------------------
-      # Detect Ruby files
-      # -------------------------------
-      - name: Detect Ruby files
-        id: check_rb
-        if: matrix.language == 'ruby'
-        run: |
-          if git ls-files '*.rb' | grep -q .; then
-            echo "found=true" >> $GITHUB_OUTPUT
-          else
-            echo "found=false" >> $GITHUB_OUTPUT
-          fi
-
-      # -------------------------------
-      # Initialize CodeQL only if files exist
-      # -------------------------------
+      - uses: actions/checkout@v4
       - name: Initialize CodeQL
         uses: github/codeql-action/init@v4
-        if: >
-          matrix.language == 'csharp' ||
-          (matrix.language == 'javascript-typescript' && steps.check_js.outputs.found == 'true') ||
-          (matrix.language == 'python' && steps.check_py.outputs.found == 'true') ||
-          (matrix.language == 'ruby' && steps.check_rb.outputs.found == 'true') ||
-          matrix.language == 'actions'
         with:
           languages: ${{ matrix.language }}
           build-mode: ${{ matrix.build-mode }}
           queries: security-extended,security-and-quality
-
-      # -------------------------------
-      # Perform CodeQL Analysis
-      # -------------------------------
       - name: Perform CodeQL Analysis
-        if: >
-          matrix.language == 'csharp' ||
-          (matrix.language == 'javascript-typescript' && steps.check_js.outputs.found == 'true') ||
-          (matrix.language == 'python' && steps.check_py.outputs.found == 'true') ||
-          (matrix.language == 'ruby' && steps.check_rb.outputs.found == 'true') ||
-          matrix.language == 'actions'
         uses: github/codeql-action/analyze@v4
         with:
           category: "/language:${{matrix.language}}"
 
-  # -------------------
-  # 2️⃣ Semgrep Scan (parallel)
-  # -------------------
   semgrep:
     name: Semgrep Scan
     runs-on: ubuntu-latest
+    needs: build-test
     steps:
       - uses: actions/checkout@v4
-  
-      # Optional: skip empty repo
       - name: Check if repo has files
         id: check_files
         run: |
@@ -128,28 +78,38 @@ jobs:
             echo "found=true" >> $GITHUB_OUTPUT
           else
             echo "found=false" >> $GITHUB_OUTPUT
-          fi
-  
-      - name: Run Semgrep on all files
+      - name: Run Semgrep
         if: steps.check_files.outputs.found == 'true'
         run: |
           docker run --rm -v ${{ github.workspace }}:/src returntocorp/semgrep \
             semgrep --config auto --error --sarif --output /src/semgrep-results.sarif
-  
       - name: Upload Semgrep SARIF
-        if: always()   # ✅ runs even if Semgrep exits 1
+        if: always()
         uses: github/codeql-action/upload-sarif@v3
         with:
           sarif_file: semgrep-results.sarif
           category: semgrep
 
-  # -------------------
-  # 3️⃣ Gitleaks Scan (parallel)
-  # -------------------
   gitleaks:
     name: Gitleaks Scan
     runs-on: ubuntu-latest
+    needs: build-test
     steps:
       - uses: actions/checkout@v4
       - name: Run Gitleaks
         uses: gitleaks/gitleaks-action@v2
+
+  # -------------------
+  # 3️⃣ Optional Deploy
+  # -------------------
+  optional-deploy:
+    name: Optional Deploy
+    runs-on: ubuntu-latest
+    needs: [build-test, codeql, semgrep, gitleaks]
+    if: github.event.pull_request.merged == true
+    steps:
+      - uses: actions/checkout@v4
+      - name: Deploy
+        run: |
+          echo "Deploying application..."
+          # Add your deployment steps here
