--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -97,8 +97,11 @@ jobs:
     needs: build-test
     steps:
       - uses: actions/checkout@v4
+  
       - name: Run Gitleaks
         uses: gitleaks/gitleaks-action@v2
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
 
   # -------------------
   # 3️⃣ Optional Deploy
