--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -163,27 +163,35 @@ jobs:
           IQ_USER: ${{ secrets.IQ_USER }}
           IQ_PASS: ${{ secrets.IQ_PASS }}
         run: |
-          # Bypass script signing for this process
+          # --- Bypass script signing for this process ---
           Set-ExecutionPolicy Bypass -Scope Process -Force
   
-          # Run IQ CLI scan
+          # --- Define temp path for script ---
+          $scriptPath = "$env:RUNNER_TEMP\nexus-scan.ps1"
+  
+          # --- Write script inline to a temporary .ps1 file ---
+          @"
           iqcli -s http://192.168.70.35:8070 `
                 -a $env:IQ_USER:$env:IQ_PASS `
                 -i my-app `
                 -t build `
                 -o json > iq-results.json
   
-          # Fail workflow only on critical violations
           if (Select-String -Path iq-results.json -Pattern "Critical Policy Violation") {
-            Write-Host "Critical Nexus Lifecycle policy violations detected!"
-            exit 1
+              Write-Host "Critical Nexus Lifecycle policy violations detected!"
+              exit 1
           }
+          "@ | Out-File -FilePath $scriptPath -Encoding UTF8
+  
+          # --- Run the temp script with bypass ---
+          powershell.exe -ExecutionPolicy Bypass -File $scriptPath
   
       - name: Upload Nexus Lifecycle JSON
         uses: actions/upload-artifact@v4
         with:
           name: iq-json
           path: iq-results.json
+
 
 
   # -------------------
