--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -159,35 +159,36 @@ jobs:
           fetch-depth: 0
   
       # -----------------------------
-      # Download Nexus IQ CLI (no admin)
+      # Download Nexus IQ CLI (Windows)
       # -----------------------------
       - name: Download Nexus IQ CLI
         shell: cmd
         run: |
-          mkdir iqcli
-          curl -L -o iqcli\iqcli.zip https://download.sonatype.com/clm/scanner/latest.zip
-          tar -xf iqcli\iqcli.zip -C iqcli
+          if not exist iqcli mkdir iqcli
+          curl -L -o iqcli\iqcli.exe https://download.sonatype.com/clm/scanner/latest-win64.exe
   
       # -----------------------------
       # Run Nexus Lifecycle Scan
       # -----------------------------
       - name: Run Nexus Lifecycle Scan
-        shell: cmd
+        shell: powershell
         env:
           IQ_USER: ${{ secrets.IQ_USER }}
           IQ_PASS: ${{ secrets.IQ_PASS }}
         run: |
-          powershell.exe -NoProfile -ExecutionPolicy Bypass -Command ^
-            "& '$PWD\iqcli\iq-cli\bin\iqcli.exe' ^
-              -s http://192.168.70.35:8070 ^
-              -a $env:IQ_USER`:$env:IQ_PASS ^
-              -i my-app ^
-              -t build ^
-              -o json > iq-results.json; ^
-             if (Select-String -Path iq-results.json -Pattern 'Critical Policy Violation') { ^
-               Write-Host 'Critical Nexus Lifecycle policy violations detected!'; ^
-               exit 1 ^
-             }"
+          $ErrorActionPreference = "Stop"
+  
+          & "$PWD\iqcli\iqcli.exe" `
+            -s http://192.168.70.35:8070 `
+            -a "$env:IQ_USER:$env:IQ_PASS" `
+            -i "my-app" `
+            -t build `
+            -o json `
+            . | Tee-Object iq-results.json
+  
+          if (Select-String -Path iq-results.json -Pattern "Critical Policy Violation") {
+            Write-Error "Critical Nexus Lifecycle policy violations detected!"
+          }
   
       # -----------------------------
       # Upload Results
@@ -197,7 +198,6 @@ jobs:
         with:
           name: iq-json
           path: iq-results.json
-
 
   # -------------------
   # 3️⃣ Optional Deploy
