--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -162,9 +162,12 @@ jobs:
       # Ensure nuget.exe exists
       - name: Download NuGet CLI
         run: |
-          if not exist nuget.exe (
-            curl -L -o nuget.exe https://dist.nuget.org/win-x86-commandline/latest/nuget.exe
-          )
+          if (-not (Test-Path "nuget.exe")) {
+              Write-Host "Downloading nuget.exe..."
+              $client = New-Object System.Net.WebClient
+              $client.DownloadFile("https://dist.nuget.org/win-x86-commandline/latest/nuget.exe", "nuget.exe")
+          }
+          
   
       # Restore packages
       - name: Restore NuGet Packages
